--- a/index.html
+++ b/index.html
@@ -267,7 +267,7 @@
                                 <textarea class="form-control" id="message" name="message" rows="10" style="resize:none;"></textarea>
                             </div>
                             <div class="col-12 text-center">
-                                <button type="submit" class="btn btn-secondary mt-4"><span class="send"></span></button>
+                                <button type="submit" class="btn btn-secondary mt-4 mb-4"><span class="send"></span></button>
                             </div>
                         </form>
                     </div>
