--- a/index.html
+++ b/index.html
@@ -266,8 +266,8 @@
                                 <label for="message"><span class="message"></span></label>
                                 <textarea class="form-control" id="message" name="message" rows="10" style="resize:none;"></textarea>
                             </div>
-                            <div class="col-12 text-center">
-                                <button type="submit" class="btn btn-secondary mt-4 mb-4"><span class="send"></span></button>
+                            <div class="col-12 text-center mb-4">
+                                <button type="submit" class="btn btn-secondary mt-4"><span class="send"></span></button>
                             </div>
                         </form>
                     </div>
