--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@
                                 <label for="message"><span class="message"></span></label>
                                 <textarea class="form-control" id="message" name="message" rows="10" style="resize:none;"></textarea>
                             </div>
-                            <div class="col-12 text-center mb-4">
+                            <div class="col-12 text-center mb-4 formsubmit">
                                 <button type="submit" class="btn btn-secondary mt-4"><span class="send"></span></button>
                             </div>
                         </form>
