--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
                                     <p class="paragraph work">QA Tester</p>
                                 </div>
                                 <div class="date col-md-3 col-12">
-                                    <span class="qadt"></span>
+                                    <i class="qadt"></i>
                                 </div>
                             </div>
 
