--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
                                     <p class="paragraph work">QA Tester</p>
                                 </div>
                                 <div class="date col-md-3 col-12">
-                                    <i class="qadt"></i>
+                                    <span class="qadt"></span>
                                 </div>
                             </div>
 
@@ -266,8 +266,8 @@
                                 <label for="message"><span class="message"></span></label>
                                 <textarea class="form-control" id="message" name="message" rows="10" style="resize:none;"></textarea>
                             </div>
-                            <div class="col-12 text-center mb-4 formsubmit">
-                                <button type="submit" class="btn btn-secondary mt-4"><span class="send"></span></button>
+                            <div class="col-12 text-center formsubmit">
+                                <button type="submit" class="btn btn-secondary mt-4 formsubmit"><span class="send"></span></button>
                             </div>
                         </form>
                     </div>
@@ -276,7 +276,7 @@
         </section>
     </main>
     <footer class="footer position-fixed w-100 bg-dark">
-        <p>Copyright <i class="fas fa-copyright"></i> by Àlex <span id="year"></span></p>
+        <p><a class="btn btn-secondary" style="font-size: 20px;" href="making.html">Making of</a> Copyright <i class="fas fa-copyright"></i> by Àlex <span id="year"></span></p>
         <p><span class="dd"></span> <span id="difference"></span> Today: <span id="date"></span></p>
     </footer>
 </body>
