--- a/html/making.html
+++ b/html/making.html
@@ -8,7 +8,7 @@
     <title>Making</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 
 <body>
@@ -28,25 +28,25 @@
                     <ul>
                         <h3 class="title" style="font-size: 40px !important;">2. Styles</h3>
                         <div class="col-4 mx-auto text-center">
-                            <h5 class="site mt-3">For design the website I use CSS with some animation for example to rotate the logo, also I use Google Font importing some fonts to use it for the titles</h5>
+                            <h5 class="site mt-3">To design the website use CSS with some animation, for example, to rotate the logo. I have also used Google Font when importing some fonts to use in titles.</h5>
                         </div>
                     </ul>
                     <ul>
                         <h3 class="title" style="font-size: 40px !important;">3. Hosting</h3>
                         <div class="col-4 mx-auto text-center">
-                            <h5 class="site mt-3">We can find the hosting in Netlfiy which is a website that use Github repositories to push files</h5>
+                            <h5 class="site mt-3">We can find the hosting on Netlify, which is a website that uses Github repositories to submit files.</h5>
                         </div>
                     </ul>
                     <ul>
                         <h3 class="title" style="font-size: 40px !important;">4. Multilanguage</h3>
                         <div class="col-4 mx-auto text-center">
-                            <h5 class="site mt-3">To set the multilanguage I use JavaScript to set a cookie with the language and JSON file to save all traductions in Spanish and English</h5>
+                            <h5 class="site mt-3">To configure the multilanguage I used JavaScript to configure a cookie with the language and two JSON files to save all the translations in Spanish and English.</h5>
                         </div>
                     </ul>
                     <ul>
                         <h3 class="title" style="font-size: 40px !important;">5. Icons</h3>
                         <div class="col-4 mx-auto text-center">
-                            <h5 class="site mt-3">For example, I use Font awesome which is a library that supply with a lot of icons that you can change width or color. In this website I use to complement the navbar, some skills,...</h5>
+                            <h5 class="site mt-3">For example, I have used Font awesome, which is a library that provides many icons that you can change in width or color. On this website I use it to complement the navigation bar, some skills, ...</h5>
                         </div>
                     </ul>
                 </ol>
